# fcitx-qt5

./: .formatignore  .gitignore  CMakeLists.txt  COPYING.BSD  README  clang-format.sh
dbusaddons/: CMakeLists.txt  FcitxQt5DBusAddonsConfig.cmake.in  fcitxqtconnection.cpp  fcitxqtconnection.h  fcitxqtconnection_p.h  fcitxqtformattedpreedit.cpp  fcitxqtinputcontextproxy.cpp  fcitxqtinputmethoditem.cpp  fcitxqtinputmethodproxy.cpp  fcitxqtinputmethodproxy.h  fcitxqtkeyboardlayout.cpp  fcitxqtkeyboardproxy.h  gen_dbus.sh
dbusaddons/interfaces/: org.fcitx.Fcitx.InputContext.xml
fcitx-qt5/: CMakeLists.txt  fcitx-qt5.pc.in  fcitxqtconnection.cpp  fcitxqtconnection_p.h  fcitxqtinputcontextproxy.h  fcitxqtinputmethodproxy.h  fcitxqtkeyboardproxy.h
guiwrapper/: CMakeLists.txt  common.h  main.cpp  mainwindow.cpp  mainwindow.h  wrapperapp.cpp  wrapperapp.h
platforminputcontext/: CMakeLists.txt  fcitx-compose-data.h  fcitxinputcontextproxy.cpp  fcitxinputcontextproxy.h  fcitxqtdbustypes.cpp  fcitxqtdbustypes.h  fcitxwatcher.cpp  fcitxwatcher.h  main.cpp  main.h  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h  qtkey.cpp  qtkey.h
po/: CMakeLists.txt  ca.po  da.po  de.po  es.po  fcitx-qt5.pot  fr.po  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
qt5/: CMakeLists.txt
qt5/dbusaddons/: CMakeLists.txt  fcitxqtformattedpreedit.cpp  fcitxqtformattedpreedit.h  fcitxqtinputcontextproxy.h  fcitxqtinputmethoditem.h  fcitxqtkeyboardlayout.h  fcitxqtkeyboardproxy.cpp
qt5/guiwrapper/: common.h  mainwindow.cpp  mainwindow.h  wrapperapp.cpp
qt5/platforminputcontext/: CMakeLists.txt  fcitxinputcontextproxy.cpp  fcitxinputcontextproxy.h  fcitxwatcher.cpp  fcitxwatcher.h  main.cpp  main.h  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h
qt5/quickphrase-editor/: batchdialog.h  editor.cpp  editor.h  editordialog.cpp  editordialog.h  filelistmodel.cpp  main.h  model.cpp
qt5/widgetsaddons/: CMakeLists.txt  fcitxqtconfiguifactory.cpp  fcitxqtconfiguifactory_p.h  fcitxqtconfiguiplugin.cpp  fcitxqtconfiguiplugin.h  fcitxqtconfiguiwidget.cpp  fcitxqtconfiguiwidget.h  fcitxqtkeysequencewidget.cpp  fcitxqtkeysequencewidget.h  qtkeytrans.cpp  qtkeytransdata.h
qt6/: CMakeLists.txt
qt6/platforminputcontext/: CMakeLists.txt  fcitx.json  fcitxinputcontextproxy.cpp  fcitxinputcontextproxy.h  fcitxqtdbustypes.cpp  fcitxqtdbustypes.h  fcitxwatcher.cpp  fcitxwatcher.h  main.cpp  main.h  org.fcitx.Fcitx.InputContext.xml  org.fcitx.Fcitx.InputContext1.xml  org.fcitx.Fcitx.InputMethod.xml  org.fcitx.Fcitx.InputMethod1.xml  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h  qtkey.cpp  qtkey.h
quickphrase-editor/: CMakeLists.txt  batchdialog.cpp  batchdialog.h  common.h  editor.cpp  editor.h  editordialog.cpp  editordialog.h  filelistmodel.h  main.cpp  main.h  model.cpp  model.h
src/: CMakeLists.txt  fcitx-compose-data.h  fcitxformattedpreedit.cpp  gen_dbus.sh  keyuni.cpp  keyuni.h  main.cpp  main.h  qfcitxinputcontextproxy.cpp  qfcitxinputcontextproxy.h  qfcitxinputmethodproxy.cpp  qfcitxinputmethodproxy.h  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h  qfreedesktopdbusproxy.cpp  qfreedesktopdbusproxy.h  utils.cpp  utils.h
widgetsaddons/: CMakeLists.txt  FcitxQt5WidgetsAddonsConfig.cmake.in  fcitxqtconfiguifactory.h  fcitxqtkeysequencewidget.cpp  fcitxqtkeysequencewidget.h  fcitxqtkeysequencewidget_p.h  qtkeytrans.cpp  qtkeytrans.h
